# click-tools

./: .gitignore  README.md  pyproject.toml
click_tools/: __init__.py  cli.py
tests/: conftest.py  test_choice_comma_separated.py  test_file_iter_string.py  test_file_or_url.py  test_file_url_iter_string.py  test_list_comma_separated.py  test_string_or_file.py  test_strings_list_or_stdin.py  test_type_converting_iterator.py  test_url_or_list_from_file_stdin.py
