[tool.poetry]
name = "click-tools"
version = "0.1.0"
description = "Tools for python click"
authors = ["Roberto Alamos <roberto@aospa.cl>"]
readme = "README.md"
packages = [{include = "click_tools"}]


[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
requests = "^2.31.0"
validators = "^0.20.0"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
