[tool.poetry]
name = "click-tools"
version = "0.1.0"
description = "Tools for python click"
authors = ["Roberto Alamos <roberto@aospa.cl>"]
readme = "README.md"
packages = [{include = "click_tools"}]


[tool.poetry.dependencies]
python = "^3.10"
click = ">=7.0"
requests = ">=2.0.0"
validators = ">=0.0.0"


[tool.poetry.group.tests]
optional = true


[tool.poetry.group.tests.dependencies]
pre-commit = "^3.5.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
